# work-history-data

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: move-done-to-history.yml  testing.yml  update.yml
code/: demo_issues.py  fetch_github_activity.py  simple.py  update.py
code/github_fetchers/: __init__.py  base.py  commits.py  discussions.py  issue_comments.py  issues.py  pull_requests.py  reviews.py
code/src/my_work_history/: __init__.py  _add_to_project.py  _cli.py  _create_project.py  _dump.py  _fetch_info.py  _globals.py  _info.py  _minify.py  _update.py
code/tests/: test_add_to_project.py  test_api_fetch.py
code/tests/test_dump/: test_graphql_api_dump.py  test_rest_api_dump.py
data/version-0+7/username-codycbakerphd/year-2026/month-05/day-07/: info-prs+opened_date-2026+05+07.json
derivatives/: README.md
derivatives/version-0+1/username-codycbakerphd/year-2026/month-02/day-22/: username-codycbakerphd_info-issues+opened_date-2026+02+22.json
derivatives/version-0+1/username-codycbakerphd/year-2026/month-02/day-25/: username-codycbakerphd_info-prs+opened_date-2026+02+25.json
derivatives/version-0+1_request-graphql/username-codycbakerphd/year-2026/month-01/day-28/: info-issues+opened_date-2026+01+28.json  info-prs+opened_date-2026+01+28.json
derivatives/version-0+1_request-graphql/username-codycbakerphd/year-2026/month-01/day-29/: info-prs+opened_date-2026+01+29.json
derivatives/version-0+1_request-graphql/username-codycbakerphd/year-2026/month-01/day-30/: info-issues+opened_date-2026+01+30.json  info-prs+opened_date-2026+01+30.json
derivatives/version-0+1_request-graphql/username-codycbakerphd/year-2026/month-02/day-02/: info-issues+opened_date-2026+02+02.json  info-prs+opened_date-2026+02+02.json
derivatives/version-0+1_request-graphql/username-codycbakerphd/year-2026/month-02/day-03/: info-issues+opened_date-2026+02+03.json  (+1 more)
sourcedata/: README.md
tests/: test_add_to_project.py  test_api_fetch.py  test_cases.py  test_create_project.py
tests/test_dump/: test_api_dump.py  test_graphql_api_dump.py  test_rest_api_dump.py
(+1333 files in other folders)
